// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBanner /> matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-1x66upb"
    >
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ErrorComponent /> matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    test
  </h1>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-1x66upb"
    />
  </div>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-16wgzhr"
    >
      Home
    </div>
  </div>
</DocumentFragment>
`;

exports[`<NotFound /> matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    test
  </h1>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-1x66upb"
    >
      <span>
        Whoops, couldn't find data for this package!
      </span>
      <br />
      <span>
        <span
          class="css-9wkshj"
        >
          Propose this package
        </span>
      </span>
    </div>
  </div>
  <div
    class="css-8a5j6a"
  >
    <div
      class="css-16wgzhr"
    >
      Home
    </div>
  </div>
</DocumentFragment>
`;
